# milo

./: .example.env  .gitignore  Cargo.toml  Makefile.toml  README.md  configuration.json  configuration.test.json
.github/workflows/: general.yaml
migrations/: 20230629122933_create_subscriptions_table.sql
scripts/: init_db.sh  local_test.ps1
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscribe.rs
tests/: health_check.rs
