[package]
name = "milo"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "milo"

[dependencies]
actix-web = "4.3.1"
reqwest = "0.11.18"
serde = { version = "1.0.164", features = ["derive"] }
config = "0.13.3"
chrono = "0.4.26"
uuid = { version = "1.4.0", features = ["v4"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.7"
tracing-appender = "0.2.2"
tracing-log = "0.1.3"
tracing-actix-web="0.7.5"
once_cell = "1.18.0"
secrecy = { version = "0.8", features = ["serde"] }

[dependencies.sqlx]
version = "0.6.3"
features = [
    "runtime-actix-native-tls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "migrate",
]
